--- a/kpanel/admin/views/default/user/userlist.html
+++ b/kpanel/admin/views/default/user/userlist.html
@@ -7,21 +7,13 @@
     <table cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
         <td class='color01 right' bgcolor='#efefef'>用户名</td>
-		<td class='color01 right' bgcolor='#efefef'>虚拟主机管理</td>
-		<td class='color01 right' bgcolor='#efefef'>FTP管理</td>
-		<td class='color01 right' bgcolor='#efefef'>数据库管理</td>
-      </tr>
+		<td class='color01 right' bgcolor='#efefef'>操作</td>
+	  </tr>
 	  !{foreach from=$list item=row}
       <tr>
-        <td class="right"><a href="/?c=user&a=info&username=!{$row.username}">!{$row.username}</a>
-		[<a href="javascript:if(confirm('确定删除!{$row.username}?')){location='?c=user&a=delete&username=!{$row.username}';}" title="删除用户"><img src='images/b_drop.gif' alt='删除用户' border="0" align="absmiddle"></a>][<a href="?c=user&a=edit&username=!{$row.username}" title="更改信息"><img src='images/b_edit.gif' alt='更改信息' border="0" align="absmiddle"></a>]
-		</td>
-		<td class="right">[<a href="/?c=host&a=addvh&username=!{$row.username}">增加主机</a>][<a href="/?c=host&a=listvh&username=!{$row.username}">主机列表</a>]</td>
-		<td class="right">[<a href="/?c=ftp&a=addftp&username=!{$row.username}">增加ftp</a>][<a href="/?c=ftp&a=listftp&username=!{$row.username}">ftp列表</a>]</td>
-
-		<td class="right">[<a href="/?c=db&a=adddb&username=!{$row.username}">增加db</a>][<a href="/?c=db&a=listdb&username=!{$row.username}">db列表</a>]</td>
-
-      </tr>
+        <td class="right"><a href="/?c=user&a=info&username=!{$row.username}">!{$row.username}</a></td>
+		<td class="right">[<a href="javascript:if(confirm('确定删除!{$row.username}?')){location='?c=user&a=delete&username=!{$row.username}';}" title="删除用户">删除</a>][<a href="?c=user&a=edit&username=!{$row.username}" title="更改信息">更改</a>][进入管理]</td>
+	  </tr>
 	  !{/foreach}
     </table>
     <div align="left">
