--- a/kpanel/admin/views/default/vhostproduct/showProduct.html
+++ b/kpanel/admin/views/default/vhostproduct/showProduct.html
@@ -7,8 +7,8 @@
       <tr id="ttitle">
 	   <td class='color01 right' bgcolor='#efefef'>ID</td>
         <td class='color01 right' bgcolor='#efefef'>产品名称</td>
-		<td class='color01 right' bgcolor='#efefef'>空间配额</td>
-		<td class='color01 right' bgcolor='#efefef'>数据库配额</td>
+		<td class='color01 right' bgcolor='#efefef'>空间配额(M)</td>
+		<td class='color01 right' bgcolor='#efefef'>数据库配额(M)</td>
 		<td class='color01 right' bgcolor='#efefef'>模板</td>
         <td class='color01 right' bgcolor='#efefef'>操作</td>
       </tr>
@@ -21,7 +21,7 @@
 		<td class="right">!{$row.templete}</td>
         <td class="right">[<a href="javascript:if(confirm('确定删除!{$row.name}?')){location='?c=vhostproduct&a=del&id=!{$row.id}';}" title="删除">
         <img src='!{$STATIC}images/b_drop.gif' alt='删除' border="0" align="absmiddle"></a>]
-        [<a href="?c=vhostproduct&a=addProductForm&id=!{$row.id}" title="更改信息">
+        [<a href="?c=vhostproduct&a=editProductForm&id=!{$row.id}" title="更改信息">
         <img src='!{$STATIC}images/b_edit.gif' alt='更改' border="0" align="absmiddle"></a>]
         </td>
       </tr>
