--- a/kpanel/user/views/default/left.html
+++ b/kpanel/user/views/default/left.html
@@ -42,9 +42,9 @@ function SwitchMenu(obj,sty)
 	  帐户管理
 	</h1>
 	<ul class="submenu" id="sub5" >
-		<li><a href="?c=user&a=listUser" target='main'>帐户信息</a></li>
+		<li><a href="?c=index&a=main" target='main'>帐户信息</a></li>
 		<li><a href="?c=user&a=add" target='main'>产品价格</a></li>	
-	    <li>退出</li>
+	    <li><a href="?c=session&a=logout" target='_top'>退出</a></li>
 	</ul>
 	<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu">财务管理</h1>
 	<ul class="submenu" id="sub4" >
