--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -1,6 +1,6 @@
-!{include file='common/head.html'}
+{{include file='common/head.html'}}
 <body style="overflow-x:hidden; overflow-y:auto;">
-<link rel="stylesheet" rev="stylesheet" href="!{$STATIC}style/left.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/left.css" type="text/css" media="all" />
 
 <table cellpadding="0" cellspacing="0" class="lefttd">
 <tr><td>
@@ -36,10 +36,10 @@ function SwitchMenu(obj,sty)
 }
 </script>
 <div id="masterdiv">
-<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu"><ol id="p2">账号管理</ol></h1>
+<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu"><ol id="p2">{{$lang.account_manage}}</ol></h1>
 	<ul class="submenu" id="sub2" >
-		<li><a href="?c=index&a=main" target='main'>我的信息</a></li>	
-		<li><a href="?c=session&a=changePasswordForm" target='main'>修改密码</a></li>	
+		<li><a href="?c=index&a=main" target='main'>{{$lang.myinfo}}</a></li>	
+		<li><a href="?c=session&a=changePasswordForm" target='main'>{{$lang.change_passwd}}</a></li>	
 		<li><a href="?c=session&a=logout" target='_top'>退出登录</a></li>
 	</ul>
 <h1 id="m3" onClick="SwitchMenu('sub3','m3')" class="menu"><ol id="p3">管理员管理</ol></h1>
@@ -63,6 +63,7 @@ function SwitchMenu(obj,sty)
 	</ol>
 	</h1>
 	<ul class="submenu" id="sub6" >
+		<li><a href="?c=vhostproduct&a=showVhost" target='main'>虚拟主机列表</a></li>	
 		<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
 		<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
 	</ul>
@@ -70,4 +71,4 @@ function SwitchMenu(obj,sty)
 </td></tr>
 </table>
 </body>
-!{include file='common/foot.html'}
+{{include file='common/foot.html'}}
