--- a/admin/view/default/user/useradd.html
+++ b/admin/view/default/user/useradd.html
@@ -1,4 +1,4 @@
-!{include file='common/head.html'}
+{{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 <div class="topimg">当前位置：主机管理 -&gt; 增加用户</div>
@@ -33,4 +33,4 @@
   </div>
 </div>
 </body>
-!{include file='common/foot.html'}
+{{include file='common/foot.html'}}
