add fame model in use control panel.

--- a/user/view/default/session/login.html
+++ b/user/view/default/session/login.html
@@ -9,7 +9,7 @@
 	<div id="warning"></div>
 	<div id="login_top"></div>
 	<div id="login_main">
-		<form action="index.php?c=session&a=login" method=post name="form1" onSubmit='return ValidateForm()'>
+		<form action="?c=session&a=login" method=post name="form1" onSubmit='return ValidateForm()'>
 		<div class="input_title">用户名</div>
 		<div class="input_box" style="margin-bottom:10px;"><input type="text" name="username" /></div>
 		<div class="input_title">密码</div>
