--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -1,4 +1,12 @@
 ﻿{{include file='common/head.html'}}
+<style type="text/css">
+<!--
+.STYLE1 {
+	color: #FFFFFF;
+	font-weight: bold;
+}
+-->
+</style>
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <script language="javascript">
 function checkPassword()
@@ -17,9 +25,12 @@ function checkPassword()
 <div id="container">
 <div class="topimg"></div>
   <div id="main" class="wid">
-  <form name='frm' action="?c=session&a=changePassword" method="post">
-    <table>
-      <tr>
+    <form name='frm' action="?c=session&a=changePassword" method="post">
+	   <table height="150" border="0" cellspacing="0">
+	   <tr>
+	   <td height="29" background="/admin/view/default/images/bb.gif"><span class="STYLE1">&nbsp;&nbsp;修改帐号密码</span></td>
+	   <td background="/admin/view/default/images/bb.gif">&nbsp;&nbsp;</td></tr>
+	      <tr>
         <td bgcolor='#efefef' class='color01 right'>旧密码</td>
         <td><input type='password' name='oldpasswd' id='oldpasswd' ></td>
       </tr>
@@ -38,8 +49,7 @@ function checkPassword()
 	 <button type="button" onClick="checkPassword()">确定</button>  </td>
       </tr>
     </tbody></table>
-  </form>
-
+	</form>
   </div>
 </div>
 </body>
