--- a/admin/view/default/top.html
+++ b/admin/view/default/top.html
@@ -7,17 +7,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="utf-8" />
 <!-- 定义链接样式表 -->
-<link rel="stylesheet" rev="stylesheet" href="css/style.css" type="text/css" media="all" />
-<link rel="stylesheet" rev="stylesheet" href="css/header.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="/admin/view/default/style/style.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="/admin/view/default/style/header.css" type="text/css" media="all" />
 <base target="content" />
 </head>
 <body>
-<table id="t" cellpadding="0" cellspacing="0">
+<table width="100%" id="t" cellpadding="0" cellspacing="0">
   <tr>
     <td>
-	<table cellspacing="0" cellpadding="0" width="100%">
+	<table width="100%" cellpadding="0" cellspacing="0">
       <tr>
-        <td id="t1"><img src="images/top-left.gif" alt="top-left" width="18" height="60" /><img src="images/logo.gif" alt="logo" width="164" height="60" /></td>
+        <td id="t1"><img src="/admin/view/default/images/logo.gif" alt="logo" width="157" height="65" /></td>
         <td id="t2">
 <SCRIPT language="javascript">
 <!--
