--- a/admin/view/default/user/useradd.html
+++ b/admin/view/default/user/useradd.html
@@ -2,12 +2,12 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
 <div class="topimg">当前位置：主机管理 -&gt; 增加用户</div>
-  <div id="main" class="wid">
+  <div id="main" class="wid" align="center">
   <form  action="?c=user&a=insert" method='post'>
-    <table cellpadding=0 cellspacing=1>
+    <table height="120" align="center" cellpadding=0 cellspacing=1>
       <tr>
-        <td class='color01 right' bgcolor='#efefef'>用户名</td>
-        <td><input type='text' name='username' id='username' value="" onblur="checkUsername();"/>&nbsp;&nbsp;<span id='check'></span></td>
+        <td bgcolor='#efefef' class='color01 right'>用户名</td>
+        <td><input type='text' name='username' id='username' value="" onBlur="checkUsername();"/>&nbsp;&nbsp;<span id='check'></span></td>
       </tr>
 
 	  <tr>
@@ -16,7 +16,7 @@
       </tr>
 	  <tr>
         <td class='color01 right' bgcolor='#efefef'>确认密码</td>
-        <td><input type='password' name='passwd2' id='passwd2' value="" onblur="checkPasswd();"/>&nbsp;&nbsp;<span id='check'></span></td>
+        <td><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/>&nbsp;&nbsp;<span id='check'></span></td>
       </tr>
 
 	   <tr>
