--- a/admin/view/default/addnode.html
+++ b/admin/view/default/addnode.html
@@ -2,9 +2,9 @@
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <div id="container">
 <div class="topimg">当前位置：主机管理 -> 增加主机</div>
-  <div id="main" class="wid">
+  <div id="main" class="wid" align="center">
   <form name='nodeform' action="?c=nodes&a={{$action}}&oldname={{$node.name}}" method="post">
-    <table>
+    <table height="165">
 		<tbody>
 		<tr>
         <td class='color01 right' bgcolor='#efefef'>名字</td>
