--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -8,12 +8,13 @@
 </head>
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
-  <div id="main" class="wid">
+  <div id="main" class="wid" align="center">
   <form  action="?c=adminuser&a=insert" method='post'>
-    <table cellpadding=0 cellspacing=1>
+    <table height="135" cellpadding=0 cellspacing=1>
+	<tr><td >&nbsp;</td><td></td></tr>
       <tr>
         <td class='color01 right' bgcolor='#efefef'>用户名</td>
-        <td><input type='text' name='username' id='username' value="" onblur="checkUsername();"/>&nbsp;&nbsp;<span id='check'></span></td>
+        <td><input type='text' name='username' id='username' value="" onBlur="checkUsername();"/>&nbsp;&nbsp;<span id='check'></span></td>
       </tr>
 
 	  <tr>
@@ -22,7 +23,7 @@
       </tr>
 	  <tr>
         <td class='color01 right' bgcolor='#efefef'>确认密码</td>
-        <td><input type='password' name='passwd2' id='passwd2' value="" onblur="checkPasswd();"/>&nbsp;&nbsp;<span id='check'></span></td>
+        <td><input type='password' name='passwd2' id='passwd2' value="" onBlur="checkPasswd();"/>&nbsp;&nbsp;<span id='check'></span></td>
       </tr>
 
 	   <tr>
