--- a/admin/view/default/listnode.html
+++ b/admin/view/default/listnode.html
@@ -1,8 +1,8 @@
-﻿{{include file='common/head.html'}}
+﻿!{include file='common/head.html'}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
-<div class="topimg">当前位置：主机管理 -> 主机列表 -> 返回<a href="/?c=user&a=listvh&username={{$username}}">{{$username}}</></div>
-<div class="topimg pal1">共计 {{$sum}} 条记录</div>
+<div class="topimg">当前位置：主机管理 -> 主机列表 -> 返回<a href="/?c=user&a=listvh&username=!{$username}">!{$username}</></div>
+<div class="topimg pal1">共计 !{$sum} 条记录</div>
   <div id="main" class="wid">
     <table width="657" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
@@ -12,23 +12,23 @@
 		<td width="81" bgcolor='#efefef' class='color01 right'>用户名</td>
         <td width="339" bgcolor='#efefef' class='color01 right'>操作</td>
       </tr>
-	  {{foreach from=$list item=row}}
+	  !{foreach from=$list item=row}
       <tr>
-        <td class="right">{{$row.name}}</td>
-		<td class="right">{{$row.host}}</td>
-		<td class="right">{{$row.port}}</td>
-		<td class="right">{{$row.user}}</td>
-        <td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=nodes&a=del&name={{$row.name}}';}" title="删除主机">
+        <td class="right">!{$row.name}</td>
+		<td class="right">!{$row.host}</td>
+		<td class="right">!{$row.port}</td>
+		<td class="right">!{$row.user}</td>
+        <td class="right">[<a href="javascript:if(confirm('确定删除!{$row.name}?')){location='?c=nodes&a=del&name=!{$row.name}';}" title="删除主机">
         删除</a>]
-        [<a href="?c=nodes&a=editForm&name={{$row.name}}" title="更改信息">更改信息
+        [<a href="?c=nodes&a=editForm&name=!{$row.name}" title="更改信息">更改信息
         </a>]
-		[<a href='?c=vhostproduct&a=refreshTemplete&name={{$row.name}}'>刷新模板</a>][<a href="?c=vhostproduct&a=exportConfig&name={{$row.name}}">导出配置文件</a>] </td>
+		[<a href='?c=vhostproduct&a=refreshTemplete&name=!{$row.name}'>刷新模板</a>][<a href="?c=vhostproduct&a=exportConfig&name=!{$row.name}">导出配置文件</a>] </td>
       </tr>
-	  {{/foreach}
+	  !{/foreach}
     </table>
     <div align="left">
 	</div>
   </div>
 </div>
 </body>
-{{include file='common/foot.html'}}
+!{include file='common/foot.html'}
