--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -27,7 +27,7 @@
 		<td class="right">{{$row.node}}</td>
 		<td class="right">{{if $row.state==0}}暂停销售{{else if $row.state==1}}购买{{else}}试用{{/if}}</td>
         <td class="right">[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}}" title="删除">
-        <img src='{{$STATIC}}images/b_drop.gif' alt='删除' border="0" align="absmiddle"></a>]
+        <img src='{{$STATIC}}images/delete.gif' alt='删除' border="0" align="absmiddle"></a>]
         [<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}" title="更改信息">
         <img src='{{$STATIC}}images/b_edit.gif' alt='更改' border="0" align="absmiddle"></a>]
         </td>
