--- a/admin/view/default/top.html
+++ b/admin/view/default/top.html
@@ -15,10 +15,10 @@
 <table width="100%" id="t" cellpadding="0" cellspacing="0">
   <tr>
     <td>
-	<table width="100%" cellpadding="0" cellspacing="0">
+	<table width="100%" cellpadding="0" cellspacing="0" background="/admin/view/default/images/bg5.gif">
       <tr>
-        <td id="t1"><img src="/admin/view/default/images/logo.gif" alt="logo" width="157" height="65" /></td>
-        <td id="t2">
+        <td id="t1" width="100%"><img src="/admin/view/default/images/bg6.png"></td>
+        <td id="t2" align="right">
 <SCRIPT language="javascript">
 <!--
 function initArray()
