--- a/user/view/default/frame/index.html
+++ b/user/view/default/frame/index.html
@@ -8,7 +8,7 @@
 	<frame src="?c=frame&a=top" name="top" noresize="noresize" scrolling="no">
 	<frameset cols="200,*" frameborder="no" border="0" framespacing="0" name="main1">
 		<frame src="?c=user&a=left" name="left" noresize="noresize">
-		<frame src="?c=frame&a=main" name="main" scrolling="yes">
+		<frame src="?c={{$fc}}&a={{$fa}}" name="main" scrolling="yes">
 	</frameset>
 </frameset>
 <noframes>
