add some image     modify some file

--- a/admin/view/default/changePassword.html
+++ b/admin/view/default/changePassword.html
@@ -26,29 +26,49 @@ function checkPassword()
 <div class="topimg"></div>
   <div id="main" class="wid">
     <form name='frm' action="?c=session&a=changePassword" method="post">
-	   <table height="150" border="0" cellspacing="0">
-	   <tr>
-	   <td height="29" background="/admin/view/default/images/bb.gif"><span class="STYLE1">&nbsp;&nbsp;修改帐号密码</span></td>
-	   <td background="/admin/view/default/images/bb.gif">&nbsp;&nbsp;</td></tr>
-	      <tr>
-        <td bgcolor='#efefef' class='color01 right'>旧密码</td>
+	   <table width="600" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
+      <tr>
+        <td width="12" height="49"><img src="/admin/view/default/images/left_2.jpg" width="12" height="49"></td>
+        <td background="/admin/view/default/images/bg3.jpg" align="left">
+		  <table width="122" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+              <td width="122" height="10"></td>
+            </tr>
+            <tr>
+              <td><img src="/admin/view/default/images/bg11.jpg" width="121" height="29"></td>
+            </tr>
+            <tr>
+              <td></td>
+            </tr>
+          </table>		</td>
+        <td width="12" height="49"><img src="/admin/view/default/images/righ_2.jpg" width="12" height="49"></td>
+      </tr>
+    </table></td>
+  </tr>
+  <tr>
+    <td height="230" align="center" valign="top" background="/admin/view/default/images/bg_10.jpg"><table width="350" height="135" border="0" cellpadding="0" cellspacing="0">
+	<tr><td>&nbsp;</td></tr>
+      <tr>
+        <td class='color01 right'>旧密码</td>
         <td><input type='password' name='oldpasswd' id='oldpasswd' ></td>
       </tr>
       <tr>
-        <td bgcolor='#efefef' class='color01 right'>新密码</td>
+        <td class='color01 right'>新密码</td>
         <td><input type='password' name='passwd' id='passwd' ></td>
       </tr>
-		<tbody>
-		<tr>
-        <td width="131" bgcolor='#efefef' class='color01 right'>确认新密码</td>
-        <td width="312"><input type='password' name='passwd2' id='passwd2'></td>
+      <tr>
+        <td class='color01 right'>确认新密码</td>
+        <td><input type='password' name='passwd2' id='passwd2'></td>
       </tr>
-		  	  	 	   <tr>
-        <td class="color01 right" bgcolor="#efefef"></td>
-        <td>
-	 <button type="button" onClick="checkPassword()">确定</button>  </td>
+      <tr>
+        <td>&nbsp;</td>
+        <td><button type="button" onClick="checkPassword()">确定</button></td>
       </tr>
-    </tbody></table>
+    </table></td>
+  </tr>
+</table>
 	</form>
   </div>
 </div>
