--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -4,52 +4,74 @@
 <div class="topimg">{{if $action=='addProduct'}}增加虚拟主机产品{{else}}修改虚拟主机产品{{/if}}</div>
   <div id="main" class="wid" align="center">
   <form name='nodeform' action="?c=vhostproduct&a={{$action}}&id={{$vhostproduct.id}}" method="post">
-    <table height="220">
-		<tbody>
-		<tr>
-        <td width="125" bgcolor='#efefef' class='color01 right'>产品名称</td>
-        <td width="312"><input type='text' name='name' id='name' value="{{$vhostproduct.name}}" onBlur="checkName();"></td>
+    <table width="500" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
+      <tr>
+        <td width="12" height="49"><img src="/admin/view/default/images/left_2.jpg" width="12" height="49"></td>
+        <td background="/admin/view/default/images/bg3.jpg" align="left">
+		  <table width="122" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+              <td width="122" height="10"></td>
+            </tr>
+            <tr>
+              <td><img src="/admin/view/default/images/bg16.png" width="121" height="29"></td>
+            </tr>
+            <tr>
+              <td></td>
+            </tr>
+          </table>		</td>
+        <td width="12" height="49"><img src="/admin/view/default/images/righ_2.jpg" width="12" height="49"></td>
       </tr>
-			
-			<tr>
-			 <td class="color01 right" bgcolor="#efefef">空间大小(M)</td>
-			 <td><input name="web_quota" value="{{$vhostproduct.web_quota}}" type="text"></td>
-			</tr>
-			<tr>
-              <td class="color01 right" bgcolor="#efefef">数据库大小(M)</td>
-			  <td><input name="db_quota" type="text" id="db_quota" value="{{$vhostproduct.db_quota}}"></td>
-		  </tr>
-			<tr>
-                <td class="color01 right" bgcolor="#efefef">价格(分/年)</td>
-			  <td><input name="price" type="text" id="price" value="{{$vhostproduct.price}}"></td>
-		  </tr>		  	
-		   	<tr>
-                <td class="color01 right" bgcolor="#efefef">模板</td>
-			  <td><input name="templete" type="text" value="{{$vhostproduct.templete}}"></td>
-		  	</tr>		 	 	  		  			  
-		  	 <tr>
-			 <td class="color01 right" bgcolor="#efefef">主机</td>
-			 <td><select name='node'>
+    </table></td>
+  </tr>
+  <tr>
+    <td height="300" align="center" valign="top" background="/admin/view/default/images/bg_10.jpg"><table width="350" height="240" border="0" cellpadding="0" cellspacing="0">
+	<tr><td>&nbsp;</td></tr>
+      <tr>
+        <td class='color01 right'>产品名称</td>
+        <td><input type='text' name='name' id='name' value="{{$vhostproduct.name}}" onBlur="checkName();"></td>
+      </tr>
+      <tr>
+        <td class='color01 right'>空间大小(M)</td>
+        <td><input name="web_quota" value="{{$vhostproduct.web_quota}}" type="text"></td>
+      </tr>
+      <tr>
+        <td class='color01 right'>数据库大小(M)</td>
+        <td><input name="db_quota" type="text" id="db_quota" value="{{$vhostproduct.db_quota}}"></td>
+      </tr>
+      <tr>
+        <td><span class="color01 right">价格(分/年)</span></td>
+        <td><input name="price" type="text" id="price" value="{{$vhostproduct.price}}"></td>
+      </tr>
+      <tr>
+        <td><span class="color01 right">模板</span></td>
+        <td><input name="templete" type="text" value="{{$vhostproduct.templete}}"></td>
+      </tr>
+      <tr>
+        <td><span class="color01 right">主机</span></td>
+        <td><select name='node'>
 			 {{foreach from=$nodes item=node}}
 			 <option value='{{$node.name}}' {{if $node.name==$vhostproduct.node}} selected {{/if}}>{{$node.name}}</option>
 			 {{/foreach}}
 			 </select></td>
-			</tr>
-		  	 <tr>
-               <td class="color01 right" bgcolor="#efefef">状态</td>
-		  	   <td><input type="radio" name="state" value="0" {{if $vhostproduct.state==0}} checked {{/if}}>
-		  	     暂停销售
-		  	       <input type="radio" name="state" value="1" {{if $vhostproduct.state==1}} checked {{/if}}>
-		  	       购买
-		  	       <input type="radio" name="state" value="2" {{if $vhostproduct.state==2}} checked {{/if}}>
-试用</td>
-  	      </tr>
-		  	  	 	   <tr>
-        <td class="color01 right" bgcolor="#efefef"></td>
-        <td>
-	 <button type="submit">确定</button>  </td>
       </tr>
-    </tbody></table>
+      <tr>
+        <td><span class="color01 right">状态</span></td>
+        <td><input type="radio" name="state" value="0" {{if $vhostproduct.state==0}} checked {{/if}}>
+		  	     暂停销售
+		  	<input type="radio" name="state" value="1" {{if $vhostproduct.state==1}} checked {{/if}}>
+		  	       购买
+		  	<input type="radio" name="state" value="2" {{if $vhostproduct.state==2}} checked {{/if}}>
+试用</td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td><button type="submit">确定</button></td>
+      </tr>
+    </table></td>
+  </tr>
+</table>
   </form>
 
   </div>
