modify some fily and images

--- a/admin/view/default/adminuser/useradd.html
+++ b/admin/view/default/adminuser/useradd.html
@@ -15,25 +15,25 @@
   <tr>
     <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
-        <td width="12" height="49"><img src="/admin/view/default/images/left_2.jpg" width="12" height="49"></td>
-        <td background="/admin/view/default/images/bg3.jpg" align="left">
+        <td width="12" height="49"><img src="{{$STATIC}}/images/left_2.jpg" width="12" height="49"></td>
+        <td background="{{$STATIC}}/images/bg3.jpg" align="left">
 		  <table width="122" border="0" cellpadding="0" cellspacing="0">
             <tr>
               <td width="122" height="10"></td>
             </tr>
             <tr>
-              <td><img src="/admin/view/default/images/bg13.png" width="121" height="29"></td>
+              <td><img src="{{$STATIC}}/images/bg13.png" width="121" height="29"></td>
             </tr>
             <tr>
               <td></td>
             </tr>
           </table>		</td>
-        <td width="12" height="49"><img src="/admin/view/default/images/righ_2.jpg" width="12" height="49"></td>
+        <td width="12" height="49"><img src="{{$STATIC}}/images/righ_2.jpg" width="12" height="49"></td>
       </tr>
     </table></td>
   </tr>
   <tr>
-    <td height="218" align="center" valign="top" background="/admin/view/default/images/bg_10.jpg"><table width="350" height="135" border="0" cellpadding="0" cellspacing="0">
+    <td height="218" align="center" valign="top" background="{{$STATIC}}/images/bg_10.jpg"><table width="350" height="135" border="0" cellpadding="0" cellspacing="0">
 	<tr><td>&nbsp;</td></tr>
       <tr>
         <td class='color01 right'>用户名</td>
