--- a/admin/view/default/controltop.html
+++ b/admin/view/default/controltop.html
@@ -94,13 +94,13 @@ function shift_status()
 			rightFrame.rows = "64,9,*";
 		else
 			rightFrame.rows = "64,9,*";
-		document.getElementById('menuSwitch1').src='images/ej1_31.gif';
+		document.getElementById('menuSwitch1').src='{{$STATIC}}images/ej1_31.gif';
 		document.getElementById('menuSwitch1').title='隐藏';
 	}
 	else
 	{
 		rightFrame.rows = "0,9,*";
-		document.getElementById('menuSwitch1').src='images/ej1_31a.gif';
+		document.getElementById('menuSwitch1').src='{{$STATIC}}images/ej1_31a.gif';
 		document.getElementById('menuSwitch1').title='显示';
 	}
 
