--- a/admin/view/default/top.html
+++ b/admin/view/default/top.html
@@ -7,17 +7,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="utf-8" />
 <!-- 定义链接样式表 -->
-<link rel="stylesheet" rev="stylesheet" href="/admin/view/default/style/style.css" type="text/css" media="all" />
-<link rel="stylesheet" rev="stylesheet" href="/admin/view/default/style/header.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/style.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/header.css" type="text/css" media="all" />
 <base target="content" />
 </head>
 <body>
 <table width="100%" id="t" cellpadding="0" cellspacing="0">
   <tr>
     <td>
-	<table width="100%" cellpadding="0" cellspacing="0" background="/admin/view/default/images/bg5.gif">
+	<table width="100%" cellpadding="0" cellspacing="0" background="{{$STATIC}}/images/bg5.gif">
       <tr>
-        <td id="t1" width="100%"><img src="/admin/view/default/images/bg6.png"></td>
+        <td id="t1" width="100%"><img src="{{$STATIC}}/images/bg6.png"></td>
         <td id="t2" align="right">
 <SCRIPT language="javascript">
 <!--
