--- a/admin/view/default/controlleft.html
+++ b/admin/view/default/controlleft.html
@@ -94,13 +94,13 @@ function shift_status()
 			mainFrame.cols = "165,9,*";
 		else
 			mainFrame.cols = "165,9,*";
-		document.getElementById('menuSwitch1').src='images/ej1_30.gif';
+		document.getElementById('menuSwitch1').src='{{$STATIC}}images/ej1_30.gif';
 		document.getElementById('menuSwitch1').title='隐藏';
 	}
 	else
 	{
 		mainFrame.cols = "0,9,*";
-		document.getElementById('menuSwitch1').src='images/ej1_30a.gif';
+		document.getElementById('menuSwitch1').src='{{$STATIC}}images/ej1_30a.gif';
 		document.getElementById('menuSwitch1').title='显示';
 	}
 
