--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -1,22 +1,33 @@
-<table width="329" border="1">
+<br /><div class="topimg">当前位置：帐户信息</div>
+<table width="70%" border=0 align="center" cellPadding=3 cellSpacing=0>
+<tr>
+  <td width="15" height="40"></td>
+</tr>
   <tr>
-    <td width="99">用户名</td>
-    <td width="214">{{$user.username}}</td>
+    <td height="25" background="{{$STATIC}}/images/th_bg.gif"><FONT color=#ffffff><STRONG>&nbsp;帐号信息</STRONG></FONT></td>
+  </tr>
+<tr>
+  <td><table width="100%" height="150" cellpadding="0" cellspacing="1" id="table">
+  <tr>
+    <td width="99">&nbsp;用户名</td>
+    <td width="214">&nbsp;{{$user.username}}</td>
   </tr>
   <tr>
-    <td>姓名</td>
-    <td>{{$user.name}}</td>
+    <td>&nbsp;姓名</td>
+    <td>&nbsp;{{$user.name}}</td>
   </tr>
   <tr>
-    <td>身份证</td>
-    <td>{{$user.id}}</td>
+    <td>&nbsp;身份证</td>
+    <td>&nbsp;{{$user.id}}</td>
   </tr>
   <tr>
-    <td>电子邮件</td>
-    <td>{{$user.email}}</td>
+    <td>&nbsp;电子邮件</td>
+    <td>&nbsp;{{$user.email}}</td>
   </tr>
   <tr>
-    <td>账户余额(元)</td>
-    <td>{{$user.money/100}}</td>
+    <td>&nbsp;账户余额(元)</td>
+    <td>&nbsp;{{$user.money/100}}</td>
   </tr>
-</table>
+</table></td>
+</tr>
+ </table>
