--- a/admin/view/default/controlleft.html
+++ b/admin/view/default/controlleft.html
@@ -113,7 +113,7 @@ function shift_status()
 <span class="cacher" id="cacheData" name="cacheData"></span>
 <table border=0 height="100%" cellspacing="0" cellpadding="0">
 	<tr>
-	 <td valign="middle" bgcolor="#DCDCDC" id="menuSwitch" style="cursor:hand;"><img id=menuSwitch1 src="images/ej1_30.gif"  width=9></td>
+	 <td valign="middle" bgcolor="#DCDCDC" id="menuSwitch" style="cursor:hand;"><img id=menuSwitch1 src="{{$STATIC}}images/ej1_30.gif"  width=9></td>
 	</tr>
 </table>
 </BODY>
