--- a/admin/view/default/kpanel.html
+++ b/admin/view/default/kpanel.html
@@ -5,12 +5,12 @@
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <frameset name="right" rows="64,9,*" cols="*" frameborder="no" border="0" framespacing="0">
-	<frame src="?c=index&a=top" name="top" noresize="noresize" scrolling="no">
-	<frame src="?c=index&a=controltop" name="controltop" noresize="noresize" scrolling="no">
+	<frame src="file:///C|/Documents and Settings/Administrator/桌面/123/UntitledFrame-1.html" name="top" noresize="noresize" scrolling="no">
+	<frame src="file:///C|/Documents and Settings/Administrator/桌面/123/UntitledFrame-2.html" name="controltop" noresize="noresize" scrolling="no">
 	<frameset cols="200,9,*" frameborder="no" border="0" framespacing="0" name="main1">
-		<frame src="?c=index&a=left" name="left" noresize="noresize">
-		<frame src="?c=index&a=controlleft" name="control" scrolling="no"> 
-		<frame src="?c=index&a=main" name="main" scrolling="yes">
+		<frame src="file:///C|/Documents and Settings/Administrator/桌面/123/UntitledFrame-3.html" name="left" noresize="noresize">
+		<frame src="file:///C|/Documents and Settings/Administrator/桌面/123/UntitledFrame-4.html" name="control" scrolling="no"> 
+		<frame src="file:///C|/Documents and Settings/Administrator/桌面/123/UntitledFrame-5.html" name="main" scrolling="yes">
 	</frameset>
 </frameset>
 <noframes>
