--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -51,7 +51,7 @@ function SwitchMenu(obj,sty)
 	<h1 id="m5" onClick="SwitchMenu('sub5','m5')" class="menu"><ol id="p5">用户管理</ol></h1>
 	<ul class="submenu" id="sub5" >
 		<li><a href="?c=user&a=listUser" target='main'>用户列表</a></li>
-		<li><a href="?c=user&a=add" target='main'>增加用户</a></li>	
+		<li><a href="/user/frame.php?c=public&a=registerForm" target='main'>增加用户</a></li>	
 	</ul>
 	<h1 id="m4" onClick="SwitchMenu('sub4','m4')" class="menu"><ol id="p4">主机管理</ol></h1>
 	<ul class="submenu" id="sub4" >
