--- a/vhost/view/default/changePassword.html
+++ b/vhost/view/default/changePassword.html
@@ -1,4 +1,4 @@
-﻿!{include file='common/head.html'}
+﻿{{include file='common/head.html'}}
 <body leftmargin="0" topmargin="0" bgcolor="#ffffff" text="#000000">
 <script language="javascript">
 function checkPassword()
@@ -43,4 +43,4 @@ function checkPassword()
   </div>
 </div>
 </body>
-!{include file='common/foot.html'}
+{{include file='common/foot.html'}}
