--- a/vhost/view/default/login.html
+++ b/vhost/view/default/login.html
@@ -1,6 +1,6 @@
-!{include file='common/head.html'}
+{{include file='common/head.html'}}
 <body>
-<link rel="stylesheet" rev="stylesheet" href="!{$STATIC}style/login.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/login.css" type="text/css" media="all" />
 <div id="header"></div>
 
 <div id="login">
