--- a/vhost/view/default/top.html
+++ b/vhost/view/default/top.html
@@ -1,8 +1,16 @@
-!{include file="common/head.html"}
+{{include file="common/head.html"}}
+<head>
+<title>{{$title}}</title>
+<!-- 定义语言编码 -->
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- 定义链接样式表 -->
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css"/>
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css"/>
+</head>
 <body>
-<table width="90%" align="center" cellpadding="0" cellspacing="0">
+<table width="100%" align="center" cellpadding="0" cellspacing="0" background="{{$STATIC}}/images/bg5.gif">
       <tr>
-        <td id="t1"><img src="images/top-left.gif" alt="top-left" width="18" height="60" /><img src="images/logo.gif" alt="logo" width="164" height="60" /></td>
+        <td id="t1"><img src="{{$STATIC}}/images/bg6.png"></td>
         <td id="t2">
 <SCRIPT language="javascript">
 <!--
