modify vhost a some file

--- a/vhost/view/default/domain/show.html
+++ b/vhost/view/default/domain/show.html
@@ -1,6 +1,7 @@
 ﻿{{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
+<div class="topimg">当前位置：绑定域名列表</div>
 <div class="topimg"></div>
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
   <div id="main" class="wid">
