--- a/vhost/view/default/left.html
+++ b/vhost/view/default/left.html
@@ -1,14 +1,9 @@
 {{include file='common/head.html'}}
-<style type="text/css">
-<!--
-.STYLE1 {font-size: 18px}
--->
-</style>
 <body style="overflow-x:hidden; overflow-y:auto;">
-<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/left.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}/style/left.css" type="text/css" media="all" />
 
 <table cellpadding="0" cellspacing="0" class="lefttd">
-<tr><td width="154" align="center">
+<tr><td width="154">
 <script type="text/javascript">
 
 function SwitchMenu(obj,sty)
@@ -43,14 +38,14 @@ function SwitchMenu(obj,sty)
 </script>
 <div id="masterdiv">
 
-	<h1 class="menu STYLE1" id="m5" onClick="SwitchMenu('sub5','m5')" >
+	<h1  align="center" class="menu " id="m5" onClick="SwitchMenu('sub5','m5')">
 	账户管理	</h1>
 	<ul class="submenu" id="sub5" >
 		<li><a href="?c=index&a=main" target='main'>帐户信息</a></li>
 		<li><a href="?c=session&a=changePasswordForm" target='main'>修改密码</a></li>
 	    <li><a href="?c=session&a=logout" target='_top'>退出</a></li>
 	</ul>
-		<h1 class="menu STYLE1" id="m5" onClick="SwitchMenu('sub5','m5')">
+		<h1 align="center" class="menu " id="m5" onClick="SwitchMenu('sub5','m5')">
 	域名绑定	</h1>
 		<ul class="submenu" id="sub6" >
 		<li><a href="?c=domain&a=show" target='main'>绑定域名列表</a></li>	
