--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -26,11 +26,11 @@
     </table></td>
   </tr>
   <tr>
-    <td height="218" align="center" valign="top" background="{{$STATIC}}/images/bg_10.jpg"><table width="350" height="200" border="0" cellpadding="0" cellspacing="0">
-	<tr><td>&nbsp;</td></tr>
+    <td height="218" align="center" valign="top" background="{{$STATIC}}/images/bg_10.jpg"><table width="385" height="200" border="0" cellpadding="0" cellspacing="0">
+	<tr><td width="126">&nbsp;</td></tr>
       <tr>
         <td class='color01 right'>名字</td>
-        <td><input type='text' name='name' id='name' value="{{$node.name}}" onBlur="checkName();"
+        <td width="259"><input type='text' name='name' id='name' value="{{$node.name}}" onBlur="checkName();"
         {{if $action=="edit"}}
         	readonly
         {{/if}}
@@ -55,7 +55,17 @@
       <tr>
         <td><span class="color01 right">密码</span></td>
         <td><input name="passwd" type="text" id="passwd" value="{{$node.passwd}}">
-			   <font color=red>*必填</font></td>
+            <font color=red>*必填</font></td>
+      </tr>
+      <tr>
+        <td><span class="color01 right">数据库管理账号</span></td>
+        <td><input name="passwd" type="text" id="passwd" value="{{$node.db_user}}">
+            <font color=red>*必填</font></td>
+      </tr>
+      <tr>
+        <td><span class="color01 right">数据库管理密码</span></td>
+        <td><input name="passwd" type="text" id="passwd" value="{{$node.db_passwd}}">
+            <font color=red>*必填</font></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
