--- a/admin/view/default/nodes/listnode.html
+++ b/admin/view/default/nodes/listnode.html
@@ -1,8 +1,8 @@
 ﻿{{include file='common/head.html'}}
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div id="container">
-<div class="topimg">当前位置：主机管理 -> 主机列表 -> 返回<a href="/?c=user&a=listvh&username={{$username}}">{{$username}}</></div>
 <div class="topimg pal1">共计 {{$sum}} 条记录</div>
+<div align='left'>[<a href='?c=nodes&a=flush'>更新配置文件</a>]</div>
   <div id="main" class="wid">
     <table width="657" cellpadding=0 cellspacing=1 id="table">
       <tr id="ttitle">
