--- a/admin/view/default/vhostproduct/addProduct.html
+++ b/admin/view/default/vhostproduct/addProduct.html
@@ -30,11 +30,11 @@
 	<tr><td>&nbsp;</td></tr>
       <tr>
         <td class='color01 right'>产品名称</td>
-        <td><input type='text' name='name' id='name' value="{{$vhostproduct.name}}" onBlur="checkName();"></td>
+        <td><input name='name' type='text' id='name' onBlur="checkName();" value="{{$vhostproduct.name}}" size="16"></td>
       </tr>
       <tr>
         <td class='color01 right'>空间大小(M)</td>
-        <td><input name="web_quota" value="{{$vhostproduct.web_quota}}" type="text"></td>
+        <td><input name="web_quota" type="text" value="{{$vhostproduct.web_quota}}" size="16"></td>
       </tr>
       <tr>
         <td class='color01 right'>数据库大小(M)</td>
