--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -36,52 +36,71 @@ function check_register()
 <div class="topimg"></div>
   <div id="main" class="wid">
   <form  name='reg' action="?c=public&a=register" method='post'>
-    <table cellpadding=0 cellspacing=1 align=center>
+    <table width="500" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td><table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
-        <td width="71" bgcolor='#efefef' class='color01 right'>用户名</td>
-        <td ><input name='username' type='text' id='username' onBlur="checkUsername();" value="" size="10"/>
+        <td width="12" height="49"><img src="{{$STATIC}}/images/left_2.jpg" width="12" height="49"></td>
+        <td background="{{$STATIC}}/images/bg3.jpg" align="left">
+		  <table width="122" border="0" cellpadding="0" cellspacing="0">
+            <tr>
+              <td width="122" height="10"></td>
+            </tr>
+            <tr>
+              <td><img src="{{$STATIC}}/images/bg19.png" width="121" height="29" /></td>
+            </tr>
+            <tr>
+              <td></td>
+            </tr>
+          </table>		</td>
+        <td width="12" height="49"><img src="{{$STATIC}}/images/righ_2.jpg" width="12" height="49"></td>
+      </tr>
+    </table></td>
+  </tr>
+  <tr>
+    <td height="218" align="center" valign="top" background="{{$STATIC}}/images/bg_10.jpg"><table width="350" height="210" border="0" cellpadding="0" cellspacing="0">
+	<tr><td>&nbsp;</td></tr>
+      <tr>
+        <td class='color01 right'>&nbsp;用户名</td>
+        <td>&nbsp;<input name='username' type='text' id='username' onBlur="checkUsername();" value="" size="16"/>
           <span class="STYLE1">*</span>
-           <input type="button" name="Submit" value="检测用户名" onClick="check_user()">
-        </td>
+           <input type="button" name="Submit" value="检测用户名" onClick="check_user()"></td>
       </tr>
-
-	  <tr>
-        <td class='color01 right' bgcolor='#efefef'>密码</td>
-        <td><input name='passwd' type='password' id='passwd' value="" size="16"/>
-        <span id='check'><span class="STYLE1">*</span></span></td>
+      <tr>
+        <td class='color01 right'>&nbsp;密码</td>
+        <td>&nbsp;<input name='passwd' type='password' id='passwd' value="" size="16"/>
+          <span id='check'><span class="STYLE1">*</span></span></td>
       </tr>
-	  <tr>
-        <td class='color01 right' bgcolor='#efefef'>确认密码</td>
-	    <td><input name='passwd2' type='password' id='passwd2'  value="" size="16"/>
+      <tr>
+        <td class='color01 right'>&nbsp;确认密码</td>
+        <td>&nbsp;<input name='passwd2' type='password' id='passwd2'  value="" size="16"/>
 	      <span id='check'><span class="STYLE1">*</span></span></td>
-	    </tr>
-	  <tr>
-        <td class='color01 right' bgcolor='#efefef'>电子邮件</td>
-	    <td><input name='email' type='text' id='email' value="" size="16"/>
-	      <span class="STYLE1">*</span>&nbsp;&nbsp;<span id='check'></span></td>
-	    </tr>
-	  <tr>
-        <td class='color01 right' bgcolor='#efefef'>真实姓名</td>
-	    <td><input name='name' type='text' id='name'  value="" size="12"/>
-	      &nbsp;&nbsp;<span id='check'></span></td>
-	    </tr>
-	  <tr>
-        <td class='color01 right' bgcolor='#efefef'>身份证</td>
-	    <td><input type='text' name='id' id='id' value="" />
-	      &nbsp;&nbsp;<span id='check'></span></td>
-	    </tr>
-	  <tr>
-        <td class='color01 right' bgcolor='#efefef'>&nbsp;</td>
-	    <td>&nbsp;&nbsp;
-	      <input name="agree" type="checkbox" id="agree" value="1">
-	      我已阅读并同意<a href="?c=">注册协议</a></td>
-	    </tr>
-
-	   <tr>
-        <td class='color01 right' bgcolor='#efefef'></td>
-        <td><button type="button" onClick="check_register()">注册</button></td>
       </tr>
-    </table>
+      <tr>
+        <td><span class="color01 right">&nbsp;电子邮件</span></td>
+        <td>&nbsp;<input name='email' type='text' id='email' value="" size="16"/>
+	      <span class="STYLE1">*</span>&nbsp;&nbsp;<span id='check'></span></td>
+      </tr>
+      <tr>
+        <td><span class="color01 right">&nbsp;真实姓名</span></td>
+        <td>&nbsp;<input name='name' type='text' id='name'  value="" size="16"/></td>
+      </tr>
+      <tr>
+        <td><span class="color01 right">&nbsp;身份证</span></td>
+        <td>&nbsp;<input type='text' name='id' id='id' value="" /></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;<input name="agree" type="checkbox" id="agree" value="1">
+	      我已阅读并同意<a href="?c=">注册协议</a></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;<button type="button" onClick="check_register()">注册</button></td>
+      </tr>
+    </table></td>
+  </tr>
+</table>
 	<div>
 	<!--S 协议--><!--E 协议-->
 	</div>
