--- a/admin/view/default/nodes/addnode.html
+++ b/admin/view/default/nodes/addnode.html
@@ -59,12 +59,12 @@
       </tr>
       <tr>
         <td><span class="color01 right">数据库管理账号</span></td>
-        <td><input name="passwd" type="text" id="passwd" value="{{$node.db_user}}">
+        <td><input name="db_user" type="text" id="db_user" value="{{$node.db_user}}">
             <font color=red>*必填</font></td>
       </tr>
       <tr>
         <td><span class="color01 right">数据库管理密码</span></td>
-        <td><input name="passwd" type="text" id="passwd" value="{{$node.db_passwd}}">
+        <td><input name="db_passwd" type="text" id="db_passwd" value="{{$node.db_passwd}}">
             <font color=red>*必填</font></td>
       </tr>
       <tr>
