--- a/user/view/default/frame/top.html
+++ b/user/view/default/frame/top.html
@@ -19,35 +19,8 @@
       <tr>
         <td id="t1" width="100%"><img src="{{$STATIC}}/images/logo.png"></td>
         <td id="t2">
-<SCRIPT language="javascript">
-<!--
-function initArray()
- {
-  for(i=0;i<initArray.arguments.length;i++)
-  this[i]=initArray.arguments[i];
- }
- var isnMonths=new initArray("1.","2.","3.","4.","5.","6.","7.","8.","9.","10.","11.","12.");
- var isnDays=new initArray("星期日","星期一","星期二","星期三","星期四","星期五","星期六","星期日");
- today=new Date();
- hrs=today.getHours();
- min=today.getMinutes();
- sec=today.getSeconds();
- clckh=""+((hrs>12)?hrs-12:hrs);
- clckm=((min<10)?"0":"")+min;clcks=((sec<10)?"0":"")+sec;
- clck=(hrs>=12)?"下午":"上午";
- var stnr="";
- var ns="0123456789";
- var a="";
-
-function getFullYear(d)
-{
-  yr=d.getYear();if(yr<1000)
-  yr+=1900;return yr;}
-  document.write("<table>");
-    document.write("<TR><TD>"+getFullYear(today)+"."+isnMonths[today.getMonth()]+""+today.getDate()+" "+isnDays[today.getDay()]+"</tr></td>");
-  document.write("</table>");
-//-->
-</SCRIPT>
+<script language="javascript" src="?c=product&a=productList&target=parent.main">
+</script>
 </td>
         </tr>
     </table>	</td>
